refact: DDLQueryBuilder 에 있던 Table 관련된 값 가지고오는 부분들 최대한 분리해서 리팩토링